Full height body

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 <meta name="theme-color" content="#ffffff">
 <title>Haughton Drone Photography</title>
 <style>
+	html {
+		height: 100%;
+	}
 	body {
 		background-image: url("DJI_0058.jpg");
 		background-size: cover;
 		overflow: hidden;
+		min-height: 100%;
 	}
 	#haughtondrone {
 		font-family: "Andalé Mono", monospace;
