Add Instagram button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
 		animation-fill-mode: forwards;
 		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	}
+	#buttons {
+		position: absolute;
+		top: 80%;
+		width: 100%;
+		text-align: center;
+	}
+	#buttons img {
+		height: 10vh;
+	}
 	
 	@keyframes titlein {
 		from {
@@ -154,6 +163,7 @@
 	<div id="photography">photography</div>
 	<div id="cambridge">Cambridge, UK</div>
 	<div id="mailto"><a href="mailto:info@haughtondronephotography.co.uk">info@haughtondronephotography.co.uk</a></div>
+	<div id="buttons"><a href="http://www.instagram.com/haughtondronephotography"><img src="instagram.png" /></a></div>
 </body>
 <script>
 document.body.classList.add('js-loading');
