--- a/index.html
+++ b/index.html
@@ -90,14 +90,21 @@
 		animation-fill-mode: forwards;
 		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	}
+
 	#buttons {
 		position: absolute;
 		top: 80%;
 		width: 100%;
 		text-align: center;
 	}
+
 	#buttons img {
 		height: 10vh;
+		opacity: 0;
+		animation-name: fadein;
+		animation-duration: 2.5s;
+		animation-delay: 4s;
+		animation-fill-mode: forwards;
 	}
 	
 	@keyframes titlein {
@@ -110,6 +117,16 @@
 			transform: translateX(0vw);
 		}
 	}
+
+	@keyframes fadein {
+		from {
+			opacity: 0%;
+		}
+		to {
+			opacity: 100%;
+		}
+	}
+
 	a:link {
 	  text-decoration: none;
 	  color: lightblue;
