--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 	}
 	#cambridge {
 		font-family: "Andalé Mono", monospace;
-		font-size: 2vw;
+		font-size: 4vh;
 		font-weight: bold;
 		color: white;
 		position: absolute;
-		top: 60%;
+		top: 65%;
 		width: 100%;
 		text-align: center;
 		opacity: 0;
@@ -78,7 +78,7 @@
 	}
 	#mailto {
 		font-family: "Andalé Mono", monospace;
-		font-size: 1.5vw;
+		font-size: 3vh;
 		position: absolute;
 		top: 70%;
 		width: 100%;
